# mokuroku

./: .gitignore  README.md  compose.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  handler.rs  lib.rs  main.rs
data/init/: init.sql
frontend/: .eslintrc.cjs  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: AddItemPanel.tsx  App.tsx  BarcodeReader.tsx  BarcodeReaderResult.tsx  BarcodeScanner.tsx  List.tsx  ListItem.tsx  UpdateItemPanel.tsx  global.d.ts  util.ts
